updating moralis service because moralis destroyed our servers after nitro update

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXTAUTH_URL=https://flecs.herokuapp.com/
-NEXT_PUBLIC_MORALIS_APP_ID=VR5tkaeEhoJ6CdCeeL9M1BbQYIC73vzONhnP0C2u
-NEXT_PUBLIC_MORALIS_SERVER_URL=https://ml1ruixwqlyv.usemoralis.com:2053/server
+NEXT_PUBLIC_MORALIS_APP_ID=e7UxHJRgKJACkXsJZNIbilsxAzp5qgmgsIE1ohSx
+NEXT_PUBLIC_MORALIS_SERVER_URL=https://kfhaqmttey4n.usemoralis.com:2053/server
 NEXT_PUBLIC_FLECS_USER_SERVICE=https://flecs-user-service.herokuapp.com/
 NEXT_PUBLIC_FLECS_USER_SERVICE_API_KEY=d7e1a3d7dd2a43a4
 NEXT_PUBLIC_FLECS_EVENTS_SERVICE=https://flecs-events-service.herokuapp.com/
